# uav-beam-xapp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  docker.yml
config/: config-file.json  schema.json
deployment/kubernetes/: configmap.yaml  deployment.yaml  service.yaml
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: CONTRIBUTING.md  DEPLOYMENT.md
examples/: README.md  basic_usage.py  custom_config.py  deploy_and_test.sh  e2_integration.py  test_rmr_local.py
examples/docker_deployment/: README.md
helm/uav-beam-xapp/: Chart.yaml  values.yaml
helm/uav-beam-xapp/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
src/uav_beam/: beam_tracker.py  rmr_client.py
tests/: test_angle_estimator.py  test_rmr_client.py
