[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uav-beam-xapp"
version = "0.1.0"
description = "UAV Beam Tracking xApp for O-RAN Near-RT RIC with 3GPP-compliant mmWave beam management"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache License 2.0"}
authors = [
    {name = "UAV O-RAN Research Team"}
]
keywords = [
    "o-ran",
    "oran",
    "uav",
    "beam-tracking",
    "mmwave",
    "5g",
    "beamforming",
    "xapp",
    "near-rt-ric",
    "3gpp"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "flask>=2.0.0,<3.0.0",
    "numpy>=1.20.0,<2.0.0",
    "scipy>=1.7.0,<2.0.0",
    "requests>=2.25.0,<3.0.0",
    "ricxappframe>=3.2.0",
    "rmr>=4.9.0",
    "mdclogpy>=1.1.3",
    "redis>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=21.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
    "isort>=5.0.0",
]
ml = [
    "torch>=1.9.0",
    "scikit-learn>=0.24.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.scripts]
uav-beam-xapp = "uav_beam.main:main"

[project.urls]
Homepage = "https://github.com/thc1006/uav-beam-xapp"
Documentation = "https://github.com/thc1006/uav-beam-xapp/blob/main/docs/"
Repository = "https://github.com/thc1006/uav-beam-xapp"
Issues = "https://github.com/thc1006/uav-beam-xapp/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=uav_beam --cov-report=html --cov-report=term --cov-report=xml"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/uav_beam"]
omit = [
    "*/tests/*",
    "*/benchmarks/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
